Style correction for book series link
Prevent lower elements from overlapping the book series link and thus blocking clicks

--- a/src/style/_books.scss
+++ b/src/style/_books.scss
@@ -165,6 +165,7 @@
 .book-series {
   display: none;
   position: relative;
+  z-index: 99;
 
   &.mobile {
     margin-top: 1rem;
